Long usernames are now either split (if they have spaces) or truncated (if they have no spaces) after 12 characters to prevent stretching of the username column

--- a/css/viewpost.css
+++ b/css/viewpost.css
@@ -1,7 +1,7 @@
 #viewPostLeftColumn {
     float: left;
     padding: 5px;
-    width: 124%;
+    width: 120%;
     border: 1px solid gray;
 	background-color: #18188D;
 	font-size: 70%;
@@ -15,7 +15,7 @@
 #viewPostRightColumn {
     float: right;
     padding: 5px;
-	width: 93%;
+	width: 92%;
     border: 1px solid gray;
 	background-color: #18188D;
 	font-size: 70%;
